syntax = "proto3";

package raft;

option java_package = "com.raftdb.rpc.proto";
option java_outer_classname = "RaftProto";
option java_multiple_files = true;

// ============================================
// Core Data Structures
// ============================================

message LogEntry {
    int64 index = 1;
    int64 term = 2;
    bytes command = 3;  // Serialized KV operation
}

// ============================================
// Election RPC
// ============================================

message VoteRequest {
    int64 term = 1;              // Candidate's term
    string candidate_id = 2;      // Candidate requesting vote
    int64 last_log_index = 3;    // Index of candidate's last log entry
    int64 last_log_term = 4;     // Term of candidate's last log entry
}

message VoteResponse {
    int64 term = 1;              // Current term, for candidate to update itself
    bool vote_granted = 2;       // True means candidate received vote
}

// ============================================
// Log Replication RPC (also used for heartbeat)
// ============================================

message AppendEntriesRequest {
    int64 term = 1;              // Leader's term
    string leader_id = 2;        // So follower can redirect clients
    int64 prev_log_index = 3;    // Index of log entry immediately preceding new ones
    int64 prev_log_term = 4;     // Term of prev_log_index entry
    repeated LogEntry entries = 5; // Log entries to store (empty for heartbeat)
    int64 leader_commit = 6;     // Leader's commit index
}

message AppendEntriesResponse {
    int64 term = 1;              // Current term, for leader to update itself
    bool success = 2;            // True if follower contained entry matching prev_log_index and prev_log_term
    
    // Optimization: help leader find correct nextIndex faster
    int64 match_index = 3;       // Highest index known to be replicated (on success)
    int64 conflict_term = 4;     // Term of conflicting entry (on failure)
    int64 conflict_index = 5;    // First index of conflict_term (on failure)
}

// ============================================
// Snapshot RPC (Phase 4)
// ============================================

message InstallSnapshotRequest {
    int64 term = 1;              // Leader's term
    string leader_id = 2;
    int64 last_included_index = 3; // Snapshot replaces all entries up through this index
    int64 last_included_term = 4;  // Term of last_included_index
    int64 offset = 5;            // Byte offset where chunk is positioned
    bytes data = 6;              // Raw bytes of the snapshot chunk
    bool done = 7;               // True if this is the last chunk
}

message InstallSnapshotResponse {
    int64 term = 1;              // Current term, for leader to update itself
}

// ============================================
// Client RPC
// ============================================

enum OperationType {
    GET = 0;
    PUT = 1;
    DELETE = 2;
}

message ClientRequest {
    string client_id = 1;        // Client identifier
    int64 sequence_num = 2;      // For deduplication
    OperationType operation = 3;
    bytes key = 4;
    bytes value = 5;             // Only for PUT
}

message ClientResponse {
    bool success = 1;
    bytes value = 2;             // For GET operation
    string error = 3;            // Error message if not success
    string leader_hint = 4;      // If not leader, hint where leader might be
}

// ============================================
// gRPC Service Definitions
// ============================================

service RaftService {
    // Invoked by candidates to gather votes
    rpc RequestVote(VoteRequest) returns (VoteResponse);
    
    // Invoked by leader to replicate log entries; also used as heartbeat
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
    
    // Invoked by leader to send chunks of a snapshot to a follower
    rpc InstallSnapshot(InstallSnapshotRequest) returns (InstallSnapshotResponse);
}

service KVService {
    // Client operations
    rpc Execute(ClientRequest) returns (ClientResponse);
}
